# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: models.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_taskandlabel_task_labels.py
task_manager/templates/: base.html  delete_form.html  form.html  index.html  login.html  navbar.html
task_manager/templates/components/: base.html  delete_form.html  footer.html  form.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  list.html  preview.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: forms.py  mixins.py  urls.py  views.py
